--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-
     <!--  Зависимости Bootstrap-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Кинотеатр</title>
+    <title>Регистрация пользователя</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -28,12 +27,31 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-2">
-        <h3>Проект job4j Кинотеатр</h3>
-        <ul>
-            <li><a th:href="@{/filmSessions}">Расписание</a></li>
-            <li><a th:href="@{/films}">Кинотека</a></li>
-        </ul>
+    <div class="container">
+        <form class="mt-3" th:action="@{/users/register}" method="post" enctype="multipart/form-data">
+            <div class="mb-3">
+                <label for="name" class="form-label"><b>Имя</b></label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Иван">
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label"><b>Почта</b></label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label"><b>Пароль</b></label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <div class="mb-3 row">
+                <div class="col-6"></div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/index}">Отмена</a></div>
+                        <div class="col-6"><button class="btn btn-primary w-100" type="submit">Сохранить</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 </body>
