--- a/src/main/resources/templates/films/list.html
+++ b/src/main/resources/templates/films/list.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Фильмы</title>
+    <title>Кинотека</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -17,9 +17,14 @@
         <div class="container">
             <a class="navbar-brand" href="/">Job4j Кинотеатр</a>
             <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
+                <div class="navbar-nav me-auto">
                     <a class="nav-item nav-link" href="/">Главная</a>
-                    <a class="nav-item nav-link active" th:href="@{/films}">Фильмы</a>
+                    <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
+                    <a class="nav-item nav-link active" th:href="@{/films}">Кинотека</a>
+                    <a class="nav-item nav-link active" th:href="@{/films}">Купить билет</a>
+                </div>
+                <div class="d-flex">
+                    <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
                 </div>
             </div>
         </div>
@@ -29,20 +34,25 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col">#</th>
+
+                    <th></th>
                     <th scope="col">Название фильма</th>
-                    <th scope="col">Год выхода в прокат</th>
-                    <th scope="col">Возрастное ограничение</th>
-                    <th scope="col">Продолжительность фильма в мин</th>
+                    <th scope="col">Краткое содержание</th>
+                    <th scope="col">Ограничение по возрасту</th>
+                    <th scope="col">Жанр фильма</th>
+                    <th scope="col">Продолжительность в минутах</th>
+                    <th scope="col">Год</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="film: ${films}">
-                    <td th:text="${film.id}" />
+                    <td><img th:src="@{/files/{fileId}(fileId=*{film.fileId})}" width="250" alt="No image"></td>
                     <td th:text="${film.name}" />
-                    <td th:text="${film.year}"/>
-                    <td th:text="${film.minimalAge}"/>
-                    <td th:text="${film.durationInMinutes}"/>
+                    <td th:text="${film.description}" />
+                    <td th:text="${film.minimalAge}" />
+                    <td th:text="${film.genre}" />
+                    <td th:text="${film.durationInMinutes}" />
+                    <td th:text="${film.year}" />
                 </tr>
                 </tbody>
             </table>
