--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,8 @@
                     <a class="nav-item nav-link active" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
                     <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
+                    <a class="nav-item nav-link" th:href="@{/films}">Купить билет</a>
+
                 </div>
                 <div class="d-flex">
                     <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
