--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -20,6 +20,7 @@
                     <a class="nav-item nav-link active" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
                     <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
+                    <a class="nav-item nav-link" th:href="@{/films}">Купить билет</a>
                 </div>
                 <div class="d-flex">
                     <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
