--- a/src/main/resources/templates/films/list.html
+++ b/src/main/resources/templates/films/list.html
@@ -5,11 +5,16 @@
     <!--  Зависимости Bootstrap-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+            crossorigin="anonymous"></script>
 
-    <title>Кинотека</title>
+    <title>Кинотеатр</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -21,7 +26,7 @@
                     <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
                     <a class="nav-item nav-link active" th:href="@{/films}">Кинотека</a>
-                    <a class="nav-item nav-link active" th:href="@{/films}">Купить билет</a>
+                    <a class="nav-item nav-link active" th:href="@{/tickets}">Купить билет</a>
                 </div>
                 <div class="d-flex">
                     <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
@@ -34,25 +39,15 @@
             <table class="table">
                 <thead>
                 <tr>
-
-                    <th></th>
-                    <th scope="col">Название фильма</th>
-                    <th scope="col">Краткое содержание</th>
-                    <th scope="col">Ограничение по возрасту</th>
-                    <th scope="col">Жанр фильма</th>
-                    <th scope="col">Продолжительность в минутах</th>
-                    <th scope="col">Год</th>
+                    <th><i class="bi bi-square"></i></th>
+                    <th scope="col">Название</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="film: ${films}">
-                    <td><img th:src="@{/files/{fileId}(fileId=*{film.fileId})}" width="250" alt="No image"></td>
-                    <td th:text="${film.name}" />
-                    <td th:text="${film.description}" />
-                    <td th:text="${film.minimalAge}" />
-                    <td th:text="${film.genre}" />
-                    <td th:text="${film.durationInMinutes}" />
-                    <td th:text="${film.year}" />
+                    <td th:text="${film.id}"/>
+                    <td><a th:text="${film.name}" th:href="@{/films/{filmId}(filmId=${film.id})}"></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
