--- a/src/main/resources/templates/tickets/create.html
+++ b/src/main/resources/templates/tickets/create.html
@@ -59,7 +59,7 @@
     <div class="container">
         <form class="mt-3" th:action="@{/tickets/create}" method="POST" th:object="${ticket}"
               enctype="multipart/form-data">
-            <input type="hidden" name="filmSessionId" th:field="*{sessionId}">
+            <input type="hidden" name="sessionId" th:field="*{sessionId}">
             <div class="mb-3">
                 <label for="row"><b>Ряд</b></label>
                 <select class="form-control" id="row" name="rowNumber">
