--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,11 +21,15 @@
                     <a class="nav-item nav-link active" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
                     <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
-                    <a class="nav-item nav-link" th:href="@{/films}">Купить билет</a>
-
+                    <a class="nav-item nav-link" th:href="@{/filmSessions}">Купить билет</a>
                 </div>
-                <div class="d-flex">
-                    <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
+                <div class="d-flex" th:if="${user.name == 'Гость'}">
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
+                </div>
+                <div class="d-flex" th:if="${user.name != 'Гость'}">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
+                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
                 </div>
             </div>
         </div>
