--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -17,13 +17,18 @@
             <a class="navbar-brand" href="/">Job4j Кинотеатр</a>
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav me-auto">
-                    <a class="nav-item nav-link active" href="/">Главная</a>
+                    <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание</a>
                     <a class="nav-item nav-link" th:href="@{/films}">Кинотека</a>
-                    <a class="nav-item nav-link" th:href="@{/films}">Купить билет</a>
+                    <a class="nav-item nav-link" th:href="@{/filmSessions}">Купить билет</a>
                 </div>
-                <div class="d-flex">
-                    <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
+                <div class="d-flex" th:if="${user.name == 'Гость'}">
+                    <a class="nav-link text-secondary me-3 active" th:href="@{/users/register}">Регистрация</a>
+                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
+                </div>
+                <div class="d-flex" th:if="${user.name != 'Гость'}">
+                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.name}"></a>
+                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
                 </div>
             </div>
         </div>
