--- a/src/main/resources/templates/tickets/success.html
+++ b/src/main/resources/templates/tickets/success.html
@@ -35,7 +35,8 @@
     </nav>
     <div class="container">
         <h3 class="mt-3">Успешная покупка билета</h3>
-        <p class="text-danger" th:text="${message}"></p>
+        <p class="text-danger" th:text="'Вы успешно приобрели билет на '+ ${ticket.getRowNumber()}
+          + ' ряд ' + ${ticket.getPlaceNumber()} + ' место.'"></p>
     </div>
 </div>
 </body>
